--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
 
         <div class="video-container" id="firstVideoContainer">
             <video id="scrollVideo1" muted preload="auto">
-                <source src="assets/orange-first-fold 2.mp4" type="video/mp4">
+                <source src="assets/orange-first-fold.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
